--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "13.4.16",
     "next-sanity": "^5.4.0",
     "next-theme": "^0.1.5",
+    "next-themes": "^0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sanity": "^3.15.1",
